--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,9 +7,18 @@
     <title>Document</title>
 </head>
 <body>
-    <ul th:each="track : ${tracks}">
-        <li th:text="${track.id}"></li>
+    test
+    <div class="col-md-3" th:each="artist : ${artists}">
         
-    </ul>
+    <div class="card" style="width: 18rem;">
+        
+        <img th:src="${artist.coverUrl}" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title" th:text="${artist.artistName}"></h5>
+          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+    </div>
 </body>
 </html>
