--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,24 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    test
-    <div class="col-md-3" th:each="artist : ${artists}">
-        
-    <div class="card" style="width: 18rem;">
-        
-        <img th:src="${artist.coverUrl}" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title" th:text="${artist.artistName}"></h5>
-          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+    <!-- BootStrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
+      crossorigin="anonymous"
+    />
+  </head>
+  <body>
+
+
+    <div class="container-fluid w-75">
+      <div class="row ">
+        <div class="col-md-3 p-3" th:each="artist : ${artists}">
+          <div class="card" style="max-width: 18rem">
+            <img
+              th:src="${artist.coverUrl}"
+              class="card-img-top p-2"
+              th:alt='${artist.artistName + " cover"}'
+              style="width: 75%; margin: auto;"
+            />
+            <div class="card-body">
+              <h5 class="card-title" th:text="${artist.artistName}"></h5>
+              <p class="card-text" th:text="${artist.styleName}"></p>
+              <a th:href="@{'/artistPage/'+${artist.id}}" class="btn btn-primary">Ecouter</a>
+            </div>
+          </div>
         </div>
       </div>
     </div>
-</body>
+
+    <!-- Bootstrap JS -->
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
