--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,48 +1,18 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="fr" xmlns:th="http://www.thymeleaf.org">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
-    <!-- BootStrap CSS -->
-    <link
-      href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css"
-      rel="stylesheet"
-      integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC"
-      crossorigin="anonymous"
-    />
+    <meta th:replace="@{/head/meta}" />
+    <title>springboard</title>
+    <link th:replace="@{/head/link}" />
   </head>
   <body class="bg-dark">
-    <main >
+    <header th:include="@{/header/navbar}"></header>
+   
+    <main class="mx-4">
+      <article th:replace="@{/artistCard/artistCard}" ></article>
+    </main>
 
-
-    <article class="container-fluid w-75">
-      <div class="row ">
-        <div class="col-md-3 p-3" th:each="artist : ${artists}">
-          <div class="card" style="max-width: 18rem">
-            <img
-              th:src="${artist.coverUrl}"
-              class="card-img-top p-2"
-              th:alt='${artist.artistName + " cover"}'
-              style="width: 75%; margin: auto;"
-            />
-            <div class="card-body">
-              <h5 class="card-title" th:text="${artist.artistName}"></h5>
-              <p class="card-text" th:text="${artist.styleName}"></p>
-              <a th:href="@{'/artistPage/'+${artist.id}}" class="btn btn-primary">Ecouter</a>
-            </div>
-          </div>
-        </div>
-      </div>
-    </article>
-  </main>
-
-    <!-- Bootstrap JS -->
-    <script
-      src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-      crossorigin="anonymous"
-    ></script>
+    <footer th:replace="@{footer/footer}"></footer>
+    <script th:replace="@{footer/script}"></script>
   </body>
 </html>
