--- a/src/main/resources/templates/newArtistPage/info.html
+++ b/src/main/resources/templates/newArtistPage/info.html
@@ -21,6 +21,7 @@
     id="webSite"
     placeholder="Metallica.com"
     th:field="${artist.webSite}"
+    th:value="${artist.webSite}"
   />
 </div>
 <!-- contact -->
