--- a/src/main/resources/templates/newArtistPage/newArtistPage.html
+++ b/src/main/resources/templates/newArtistPage/newArtistPage.html
@@ -13,7 +13,7 @@
       <article>
         
         <h2 class="text-danger" th:if="${savePageError}" th:text="${savePageError}"></h2>
-        <form class="p-5" th:action="@{/user/newArtistPage/upload}" method="POST" enctype="multipart/form-data">
+        <form class="p-5" th:action="@{/user/newArtistPage/upload}" method="POST" enctype="multipart/form-data" novalidate>
           
           <!-- bloc information -->
           <h3>Vos Informations <span class="text-danger">*</span></h3>
