--- a/src/main/resources/templates/newArtistPage/checkIsInList.html
+++ b/src/main/resources/templates/newArtistPage/checkIsInList.html
@@ -4,7 +4,8 @@
     <input
       class="form-check-input"
       type="checkbox"
-      th:field="${artist.isOnArtistList}"
+      value="true"
+      th:field="${artist.OnArtistList}"
       id="checkContact"
       
       
