modify artist page OK

--- a/src/main/resources/templates/modifyArtistPage/modifyCover.html
+++ b/src/main/resources/templates/modifyArtistPage/modifyCover.html
@@ -6,7 +6,7 @@
       type="checkbox"
       id="changeCover"
       onclick="displayCoverInput()"
-      th:field= "${modifyCoverString}"
+      name="modifyCover"
       value="true"
       
     />
@@ -31,7 +31,7 @@
         Valider la page
       </button>
     </div>
-  
+</div>
 
   <div class="col-md-5 p-auto">
     <img id="output" class="d-block m-auto" />
