--- a/src/main/resources/templates/modifyArtistPage/modifyAudioTracks.html
+++ b/src/main/resources/templates/modifyArtistPage/modifyAudioTracks.html
@@ -7,7 +7,7 @@
     type="checkbox"
     id="changeTracks"
     onclick="displayTracksInputs()"
-    th:field="${modifyTracksString}"
+    name="modifyTracks"
     value="true"
     
   />
