--- a/src/main/resources/templates/newArtistPage/checkIsInList.html
+++ b/src/main/resources/templates/newArtistPage/checkIsInList.html
@@ -5,7 +5,7 @@
       class="form-check-input"
       type="checkbox"
       value="true"
-      th:field="${artist.OnArtistList}"
+      th:field="${artist.isOnArtistList}"
       id="checkContact"
       
       
