--- a/src/main/resources/templates/modifyArtistPage/modifyAudioTracks.html
+++ b/src/main/resources/templates/modifyArtistPage/modifyAudioTracks.html
@@ -1,16 +1,13 @@
 <!-- audio tracks -->
 <div>
-  <label
-    for="changeTracks"
-  >voulez vous changer les pistes audio ?</label>
   <input
     type="checkbox"
     id="changeTracks"
     onclick="displayTracksInputs()"
     name="modifyTracks"
     value="true"
-    
   />
+  <label for="changeTracks">voulez vous changer les pistes audio ?</label>
 </div>
 <!-- audio tracks -->
 <div class="container d-none" id="audioTracks">
@@ -26,7 +23,13 @@
         accept="audio/*"
       />
       <label for="audio" class="form-label">Piste Audio</label>
-      <input class="form-control" type="file" id="audio" name="audioFiles" th:placeholder=${artist.trackList[__${itemStat.index}__].name}/>
+      <input
+        class="form-control"
+        type="file"
+        id="audio"
+        name="audioFiles"
+        th:placeholder="${artist.trackList[__${itemStat.index}__].name}"
+      />
     </div>
   </div>
 </div>
@@ -35,6 +38,8 @@
   function displayTracksInputs() {
     const checkBox = document.getElementById("changeTracks");
     const audioTrack = document.getElementById("audioTracks");
-    audioTrack.className = checkBox.checked ? "container d-block" : "container d-none";
+    audioTrack.className = checkBox.checked
+      ? "container d-block"
+      : "container d-none";
   }
 </script>
