--- a/src/main/resources/templates/footer/footer.html
+++ b/src/main/resources/templates/footer/footer.html
@@ -9,3 +9,4 @@
     </ul>
     <div class="copyright">&copy; 2022 | Roland Foucher | All Rights Reserved</div>
 </footer>
+<script th:replace="@{footer/script}"></script>
