--- a/src/main/resources/templates/newArtistPage/newArtistPage.html
+++ b/src/main/resources/templates/newArtistPage/newArtistPage.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
-<html lang="fr" xmlns:th="http://www.thymeleaf.org">
-  <head>
-    <meta th:replace="@{/head/meta}" />
-    <title>Créer votre page artiste</title>
-    <link th:replace="@{/head/link}" />
-  </head>
+<html lang="fr">
+<head th:replace="head/head :: head('SpringBoard - Nouvel Artist')">
+
   <body class="bg-dark text-white">
     <header th:include="@{/header/navbar}"></header>
   <body class=" ">
@@ -46,6 +43,5 @@
     </main>
 
     <footer th:replace="@{footer/footer}"></footer>
-    <script th:replace="@{footer/script}"></script>
   </body>
 </html>
