delete artist page OK

--- a/src/main/resources/templates/artistPage/artistPage.html
+++ b/src/main/resources/templates/artistPage/artistPage.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head th:replace="head/head :: head('SpringBoard - ' + ${artist.artistName})">
+<head th:replace="head/head :: head('SpringBoard - ' + ${artist.artistName})"></head>
   <body class="bg-dark text-white">
     <header th:include="@{/header/navbar}"></header>
     <main>
