--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head th:replace="head/head :: head('SpringBoard')">
+<head th:replace="head/head :: head('SpringBoard')"></head>
   <body class="bg-dark">
     <header th:include="@{/header/navbar}"></header>
    
