--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -1,7 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head th:replace="head/head :: head('SpringBoard - Nouveau Compte')">
-  </head>
+<head th:replace="head/head :: head('SpringBoard - Nouveau Compte')"></head>
   <body class="bg-dark">
     <header th:include="@{/header/navbar}"></header>
     <div class="card w-75 m-auto bg-dark text-white">
