--- a/src/main/resources/templates/modifyArtistPage/modifyArtistPage.html
+++ b/src/main/resources/templates/modifyArtistPage/modifyArtistPage.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head th:replace="head/head :: head('SpringBoard - modifier artist')">
+<head th:replace="head/head :: head('SpringBoard - modifier artist')"></head>
 
   <body class="bg-dark text-white">
     <header th:include="@{/header/navbar}"></header>
