--- a/src/main/resources/templates/newArtistPage/newArtistPage.html
+++ b/src/main/resources/templates/newArtistPage/newArtistPage.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head th:replace="head/head :: head('SpringBoard - Nouvel Artist')">
+<head th:replace="head/head :: head('SpringBoard - Nouvel Artist')"></head>
 
   <body class="bg-dark text-white">
     <header th:include="@{/header/navbar}"></header>
