--- a/src/main/resources/templates/login/register.html
+++ b/src/main/resources/templates/login/register.html
@@ -3,9 +3,11 @@
 <head th:replace="head/head :: head('SpringBoard - Nouveau Compte')"></head>
   <body class="bg-dark">
     <header th:include="@{/header/navbar}"></header>
+    <p th:if="${feedback}" th:text="${feedback}" class="alert-danger p-3"></p>
     <div class="card w-75 m-auto bg-dark text-white">
+
       <div class="card-body">
-        <p th:if="${feedback}" th:text="${feedback}"></p>
+        
         <form th:action="@{/register}" method="post">
           <label for="email">Nom</label>
           <input
