--- a/src/main/resources/templates/error/503.html
+++ b/src/main/resources/templates/error/503.html
@@ -5,7 +5,7 @@
     <header th:include="@{/header/navbar}"></header>
    
     <main class="text-white text-center m-5">
-      <h1 class="m-5">Un Problème de connexion au serveur est survenu</h1>
+      <h1 class="m-5">Un Problème technique est survenu</h1>
       <h1 class="far fa-surprise" ></h1>
     </main>
 
