--- a/src/main/resources/templates/account/profil.html
+++ b/src/main/resources/templates/account/profil.html
@@ -6,11 +6,12 @@
    
     <main class="m-4">
       <h1 class="card-img-top fas fa-user-circle text-white text-center mb-5"></h1>
-      <div class="card bg-dark text-white m-auto border-secondary w-25">
+      <div class="card bg-dark text-white m-auto border-secondary w-50">
         
         <div class="card-body p-4">
-          <h3 class="card-text" th:text="${user.firstName+ ' ' + user.lastName}"></h3>
-          <h3 class="card-text pb-2" th:text="${user.email}"></h3>
+          <h3 class="card-text" th:text="${'Prenom : ' + user.firstName}"></h3>
+          <h3 class="card-text" th:text="${'Nom : ' + user.lastName}"></h3>
+          <h3 class="card-text pb-2" th:text="${'mail : ' + user.email}"></h3>
           <p class="card-text" sec:authorize="hasRole('ROLE_USER')">Profil Standard </p>
           <p class="card-text" sec:authorize="hasRole('ROLE_ARTIST')">Profil Artist</p>
           <p class="card-text" sec:authorize="hasRole('ROLE_Pro')">Profil Pro</p>
