--- a/src/main/resources/templates/artistPage/leftPart.html
+++ b/src/main/resources/templates/artistPage/leftPart.html
@@ -1,4 +1,4 @@
-<article class="col-md-6">
+<article class="col-md-6 order-2 order-md-1">
     <div class="container-fluid">
       <div class="row">
         <!-- Lecteur audio -->
