--- a/src/main/resources/templates/artistPage/rightPart.html
+++ b/src/main/resources/templates/artistPage/rightPart.html
@@ -1,4 +1,4 @@
-<aside class="col-md-6 p-0">
+<aside class="col-md-6 order-1 order-md-2 p-0">
   <div
     class="card border-0 m-auto bg-dark text-muted small"
     style="width: 18rem"
