--- a/src/main/resources/templates/account/profil.html
+++ b/src/main/resources/templates/account/profil.html
@@ -6,7 +6,7 @@
    
     <main class="m-4">
       <h1 class="card-img-top fas fa-user-circle text-white text-center mb-5"></h1>
-      <div class="card bg-dark text-white m-auto border-secondary">
+      <div class="card bg-dark text-white m-auto border-secondary card col-12 col-md-6">
         
         <div class="card-body p-4">
           <h3 class="card-text" th:text="${'Prenom : ' + user.firstName}"></h3>
