--- a/src/main/resources/templates/login/login.html
+++ b/src/main/resources/templates/login/login.html
@@ -13,7 +13,7 @@
       Vous avez été déconnecté
     </div>
     <main class="m-5 text-white">
-      <div class="w-50 mx-auto p-5">
+      <div class="col-12 col-md-6 mx-auto p-5">
         <h2 class="form-signin-heading mb-3">Connexion</h2>
         <form method="post" th:action="@{/login}">
           <div class="mb-3">
