--- a/src/main/resources/templates/login/register.html
+++ b/src/main/resources/templates/login/register.html
@@ -4,7 +4,7 @@
   <body class="bg-dark">
     <header th:include="@{/header/navbar}"></header>
     <p th:if="${feedback}" th:text="${feedback}" class="alert-danger p-3"></p>
-    <div class="card w-75 m-auto bg-dark text-white">
+    <div class="card col-12 col-md-6 m-auto bg-dark text-white">
       <div class="card-body">
         <form th:action="@{/register}" method="post">
           <div th:replace="@{login/registerFormBody}"></div>
