init artist search page

--- a/src/main/resources/templates/account/myAccount.html
+++ b/src/main/resources/templates/account/myAccount.html
@@ -48,9 +48,9 @@
         </div>
       </div>
 
-      <div class="text-dark">
-        <article th:replace="@{/artistCard/artistCard}"></article>
-      </div>
+      <article class="text-dark">
+        <div th:replace="@{/artistCard/artistCard}"></div>
+      </article>
     </main>
     <footer th:replace="@{footer/footer}"></footer>
   </body>
