--- a/src/main/resources/templates/artistCard/artistCard.html
+++ b/src/main/resources/templates/artistCard/artistCard.html
@@ -1,4 +1,4 @@
-<article class="container-fluid mb-5" >
+<div class="container-fluid mb-5" >
     <div class="row">
       <div class="col-md-3 p-3 " th:each="artist : ${artists}">
         <div th:replace="artistCard/oneCard">
@@ -6,4 +6,4 @@
         </div>
       </div>
     </div>
-  </article>
+  </div>
