--- a/src/main/resources/templates/header/navbar.html
+++ b/src/main/resources/templates/header/navbar.html
@@ -9,7 +9,7 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         
         <li class="nav-item">
-          <a class="nav-link" href="#">Les Artistes</a>
+          <a class="nav-link" th:href="@{/artistSearch}">Les Artistes</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">En Concert</a>
