--- a/src/main/resources/templates/account/profil.html
+++ b/src/main/resources/templates/account/profil.html
@@ -14,7 +14,7 @@
           <h3 class="card-text pb-2" th:text="${'mail : ' + user.email}"></h3>
           <p class="card-text" sec:authorize="hasRole('ROLE_USER')">Profil Standard </p>
           <p class="card-text" sec:authorize="hasRole('ROLE_ARTIST')">Profil Artist</p>
-          <p class="card-text" sec:authorize="hasRole('ROLE_Pro')">Profil Pro</p>
+          <p class="card-text" sec:authorize="hasRole('ROLE_PRO')">Profil Pro</p>
         </div>
         
       </div>
