--- a/src/main/resources/templates/header/navbar.html
+++ b/src/main/resources/templates/header/navbar.html
@@ -9,7 +9,7 @@
       <ul class="navbar-nav me-auto mb-2 mb-lg-0">
         
         <li class="nav-item">
-          <a class="nav-link" th:href="@{/artistSearch}">Les Artistes</a>
+          <a class="nav-link" th:href="@{/artistSearch/0}">Les Artistes</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" href="#">En Concert</a>
@@ -17,8 +17,8 @@
         
        
       </ul>
-      <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="artist" aria-label="Search">
+      <form class="d-flex" th:action="@{/artistSearch/0}">
+        <input class="form-control me-2" type="search" placeholder="artist" aria-label="Search" name="search">
         <button class="btn btn-outline-secondary" type="submit">Search</button>
       </form>
     </div>
