--- a/src/main/resources/templates/artistSearch/artistSearch.html
+++ b/src/main/resources/templates/artistSearch/artistSearch.html
@@ -42,10 +42,10 @@
           </div> -->
         </div>
       </form>
-      <div class="container">
+      <!-- <div class="container">
         <div class="row">
-          <aside class="col-3"></aside>
-          <article class="col-9">
+          <aside class="col-3"></aside> -->
+          <!-- <article class="col-9"> -->
             <div th:replace="@{/artistCard/artistCard}"></div>
             <nav aria-label="Page navigation">
               <ul class="pagination justify-content-center">
@@ -58,9 +58,9 @@
                 </li>
               </ul>
             </nav>
-          </article>
-        </div>
-      </div>
+          <!-- </article> -->
+        <!-- </div>
+      </div> -->
     </main>
 
     <footer th:replace="@{footer/footer}"></footer>
